# PrimeNumber

./: CMakeLists.txt  PrimeNumber.cbp  PrimeNumber.depend  PrimeNumber.layout  ProgrammingChallenge.doc  README  main.cpp
include/: PrimalityTest.h  PrimeUtils.h  TimeUtils.hpp
src/: PrimalityTest.cpp  PrimeUtils.cpp
